gapgpt: scroll button fixes

--- a/sites/gapgpt/styles.css
+++ b/sites/gapgpt/styles.css
@@ -6,9 +6,17 @@
   display: none !important;
 }
 
-.q-infinite-scroll > [id^="message-"] {
+.q-infinite-scroll > [id^="message-"] .user-chat-box,
+.q-infinite-scroll > [id^="message-"] .bot-chat-box {
+  display: flex !important;
+  align-items: flex-start;
   position: relative;
   scroll-margin-top: 5rem;
+}
+
+.q-infinite-scroll > [id^="message-"] .user-chat-box > :not(.site-enhancer-message-nav) {
+  flex: 1 1 auto;
+  min-width: 0;
 }
 
 .input-container-v2 {
@@ -16,12 +24,15 @@
 }
 
 .site-enhancer-message-nav {
-  position: absolute;
-  top: 1rem;
-  right: -2.75rem;
+  position: sticky;
+  top: 0;
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
   gap: 0.375rem;
+  width: 2rem;
+  height: max-content;
+  margin-top: 0;
   opacity: 0;
   transform: translateX(0.25rem);
   transition:
@@ -30,8 +41,22 @@
   z-index: 5;
 }
 
-.q-infinite-scroll > [id^="message-"]:hover .site-enhancer-message-nav,
-.q-infinite-scroll > [id^="message-"]:focus-within .site-enhancer-message-nav,
+.user-chat-box .site-enhancer-message-nav {
+  order: -1;
+  margin-left: 0.5rem;
+  margin-right: -2.5rem;
+  transform: translateX(0.25rem);
+}
+
+.bot-chat-box .site-enhancer-message-nav {
+  margin-left: 0.5rem;
+  margin-right: -2.5rem;
+}
+
+.q-infinite-scroll > [id^="message-"] .user-chat-box:hover .site-enhancer-message-nav,
+.q-infinite-scroll > [id^="message-"] .bot-chat-box:hover .site-enhancer-message-nav,
+.q-infinite-scroll > [id^="message-"] .user-chat-box:focus-within .site-enhancer-message-nav,
+.q-infinite-scroll > [id^="message-"] .bot-chat-box:focus-within .site-enhancer-message-nav,
 .site-enhancer-message-nav:focus-within {
   opacity: 1;
   transform: translateX(0);
@@ -74,6 +99,16 @@
 
 @media (max-width: 64rem) {
   .site-enhancer-message-nav {
-    right: 0.25rem;
+    top: 0rem;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
+  }
+
+  .user-chat-box .site-enhancer-message-nav {
+    margin-left: 0;
+  }
+
+  .bot-chat-box .site-enhancer-message-nav {
+    margin-right: 0;
   }
 }
